feat: main section 3 and 4

--- a/index.html
+++ b/index.html
@@ -86,7 +86,49 @@
                 </div>
             </div>
         </div>
+
+        <!-- section3 -->
+        <div id="section3" class="text-light">
+            <div class="container container d-flex flex-column align-items-center py-5">
+
+                <h2>ABOUT</h2>
+
+                <div class="row px-5 pt-5">
+                    <div class="col ps-5 ms-5">
+                        <span>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</span>
+                    </div>
+                    <div class="col pe-5 me-5">
+                        <span>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</span>
+                    </div>
+                </div>
+
+                <button type="button" class="btn btn-outline-light mt-4">Download</button>
+            </div>
+        </div>
+
+        <!-- section4 -->
+        <div id="section4">
+            <div class="container container d-flex flex-column px-5 py-5 pt-5">
+                <h2 class="align-self-center">CONTACT ME</h2>
+
+                <form action="" class="offset-1 d-flex flex-column">
+
+                    <label for="name">Name</label>
+                    <input class="w-75 border-0 border-bottom" type="text">
+                    <label for="name">Email Adress</label>
+                    <input class="w-75 border-0 border-bottom" type="email">
+                    <label for="name">Phone Number</label>
+                    <input class="w-75 border-0 border-bottom" type="number">
+                    <label for="name">Message</label>
+                    <textarea class="w-75 border-0 border-bottom"></textarea>
+                </form>
+                
+                <button type="button" class="btn btn-success align-self-start offset-1 mt-3">Send</button>
+            </div>
+        </div>
     </main>
+
+
 
 
 
