--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
     <link rel="stylesheet" href="css/style.css">
@@ -126,8 +128,49 @@
                 <button type="button" class="btn btn-success align-self-start offset-1 mt-3">Send</button>
             </div>
         </div>
+
     </main>
 
+
+    <footer class="text-light">
+        <div id="footer-top">
+            <div class="container container d-flex flex-column align-items-center py-5">
+
+                <div class="row text-center">
+                    <div class="col d-flex flex-column">
+                        <strong>LOCATION</strong>
+                        <span>2215 John Daniel Drive Clark, MO 54243</span>
+                    </div>
+                    <div class="col d-flex flex-column">
+                        <strong>AROUND THE WEB</strong>
+                        <div class="__icons d-flex justify-content-center">
+                            <i class="fa-brands fa-facebook-f px-2"></i>
+                            <i class="fa-brands fa-google-plus-g px-2"></i>
+                            <i class="fa-brands fa-twitter px-2"></i>
+                            <i class="fa-brands fa-linkedin-in px-2"></i>
+                        </div>
+
+
+                    </div>
+                    <div class="col d-flex flex-column">
+                        <strong>ABOUT FREELANCER</strong>
+                        <span>Freelance is a free to use, open source Bootstrap theme created by Start Bootstrap.</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div id="footer-bottom">
+
+            <div class="container container d-flex flex-column align-items-center py-5">
+                <span>
+                    Copyright © Your Website 2019
+                </span>
+            </div>
+        </div>
+
+    </footer>
 
 
 
